assignment #3: minor updates with security